--- a/main.css
+++ b/main.css
@@ -25,8 +25,8 @@ div#app > nav > span{
     width: 210px;
     box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
     margin-left: 30px;
-   
-    margin-bottom: 12px;
+    margin-bottom: 15px;
+    margin-top: 5px;
     border-radius: 8px;
     float: left;
 }
